Implement get all movie